Laboratorium 5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instructions
Rule 1     instructions -> instruction
Rule 2     instructions -> instruction instructions
Rule 3     instruction -> block
Rule 4     instruction -> conditional
Rule 5     instruction -> loop
Rule 6     instruction -> statement SEMICOLON
Rule 7     instruction -> error SEMICOLON
Rule 8     statement -> assignment
Rule 9     statement -> flow_keyword
Rule 10    statement -> fun
Rule 11    statement -> return
Rule 12    statement -> print
Rule 13    flow_keyword -> BREAK
Rule 14    flow_keyword -> CONTINUE
Rule 15    block -> CURLYOPEN instructions CURLYCLOSE
Rule 16    block -> CURLYOPEN error CURLYCLOSE
Rule 17    print -> PRINT print_body
Rule 18    print_body -> expression
Rule 19    print_body -> expression COMMA print_body
Rule 20    return -> RETURN expression
Rule 21    return -> RETURN
Rule 22    string -> STRING
Rule 23    conditional -> IF ROUNDOPEN expression ROUNDCLOSE instruction
Rule 24    conditional -> IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
Rule 25    loop -> while
Rule 26    loop -> for
Rule 27    while -> WHILE ROUNDOPEN expression ROUNDCLOSE instruction
Rule 28    for -> FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
Rule 29    fun -> fun_name ROUNDOPEN fun_body ROUNDCLOSE
Rule 30    fun -> fun_name ROUNDOPEN error ROUNDCLOSE
Rule 31    fun_body -> numeric_expression
Rule 32    fun_body -> numeric_expression COMMA fun_body
Rule 33    fun_name -> ZEROS
Rule 34    fun_name -> ONES
Rule 35    fun_name -> EYE
Rule 36    assignment -> assignment_left_side assignment_operator expression
Rule 37    assignment -> assignment_left_side ASSIGN matrix
Rule 38    assignment -> assignment_left_side ASSIGN vector
Rule 39    assignment_left_side -> var
Rule 40    assignment_operator -> ASSIGN
Rule 41    assignment_operator -> ADDASSIGN
Rule 42    assignment_operator -> SUBASSIGN
Rule 43    assignment_operator -> MULASSIGN
Rule 44    assignment_operator -> DIVASSIGN
Rule 45    matrix -> SQUAREOPEN matrix_body SQUARECLOSE
Rule 46    matrix_body -> vector
Rule 47    matrix_body -> vector COMMA matrix_body
Rule 48    vector -> SQUAREOPEN vector_body SQUARECLOSE
Rule 49    vector -> SQUAREOPEN SQUARECLOSE
Rule 50    vector_body -> numeric_expression
Rule 51    vector_body -> numeric_expression COMMA vector_body
Rule 52    expression -> comparison_expression
Rule 53    expression -> numeric_expression
Rule 54    expression -> fun
Rule 55    comparison_expression -> numeric_expression L numeric_expression
Rule 56    comparison_expression -> numeric_expression G numeric_expression
Rule 57    comparison_expression -> numeric_expression EQ numeric_expression
Rule 58    comparison_expression -> numeric_expression NEQ numeric_expression
Rule 59    comparison_expression -> numeric_expression GE numeric_expression
Rule 60    comparison_expression -> numeric_expression LE numeric_expression
Rule 61    comparison_expression -> ROUNDOPEN comparison_expression ROUNDCLOSE
Rule 62    numeric_expression -> numeric_expression ADD term
Rule 63    numeric_expression -> numeric_expression SUB term
Rule 64    numeric_expression -> numeric_expression DOTADD term
Rule 65    numeric_expression -> numeric_expression DOTSUB term
Rule 66    numeric_expression -> term
Rule 67    term -> term MUL factor
Rule 68    term -> term DIV factor
Rule 69    term -> term DOTMUL factor
Rule 70    term -> term DOTDIV factor
Rule 71    term -> factor
Rule 72    factor -> FLOATNUM
Rule 73    factor -> string
Rule 74    factor -> INTNUM
Rule 75    factor -> var
Rule 76    factor -> ROUNDOPEN numeric_expression ROUNDCLOSE
Rule 77    factor -> unary_operator
Rule 78    unary_operator -> negation
Rule 79    unary_operator -> transposition
Rule 80    negation -> SUB factor
Rule 81    transposition -> factor TRANSPOSITION
Rule 82    var -> ID
Rule 83    var -> ID SQUAREOPEN fun_body SQUARECLOSE

Terminals, with rules where they appear

ADD                  : 62
ADDASSIGN            : 41
ASSIGN               : 28 37 38 40
BREAK                : 13
COMMA                : 19 32 47 51
CONTINUE             : 14
CURLYCLOSE           : 15 16
CURLYOPEN            : 15 16
DIV                  : 68
DIVASSIGN            : 44
DOTADD               : 64
DOTDIV               : 70
DOTMUL               : 69
DOTSUB               : 65
ELSE                 : 24
EQ                   : 57
EYE                  : 35
FLOATNUM             : 72
FOR                  : 28
G                    : 56
GE                   : 59
ID                   : 28 82 83
IF                   : 23 24
INTNUM               : 74
L                    : 55
LE                   : 60
MUL                  : 67
MULASSIGN            : 43
NEQ                  : 58
ONES                 : 34
PRINT                : 17
RANGE                : 28
RETURN               : 20 21
ROUNDCLOSE           : 23 24 27 29 30 61 76
ROUNDOPEN            : 23 24 27 29 30 61 76
SEMICOLON            : 6 7
SQUARECLOSE          : 45 48 49 83
SQUAREOPEN           : 45 48 49 83
STRING               : 22
SUB                  : 63 80
SUBASSIGN            : 42
TRANSPOSITION        : 81
WHILE                : 27
ZEROS                : 33
error                : 7 16 30

Nonterminals, with rules where they appear

assignment           : 8
assignment_left_side : 36 37 38
assignment_operator  : 36
block                : 3
comparison_expression : 52 61
conditional          : 4
expression           : 18 19 20 23 24 27 36
factor               : 67 68 69 70 71 80 81
flow_keyword         : 9
for                  : 26
fun                  : 10 54
fun_body             : 29 32 83
fun_name             : 29 30
instruction          : 1 2 23 24 24 27 28
instructions         : 2 15 0
loop                 : 5
matrix               : 37
matrix_body          : 45 47
negation             : 78
numeric_expression   : 28 28 31 32 50 51 53 55 55 56 56 57 57 58 58 59 59 60 60 62 63 64 65 76
print                : 12
print_body           : 17 19
return               : 11
statement            : 6
string               : 73
term                 : 62 63 64 65 66 67 68 69 70
transposition        : 79
unary_operator       : 77
var                  : 39 75
vector               : 38 46 47
vector_body          : 48 51
while                : 25

Parsing method: LALR

state 0

    (0) S' -> . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . error SEMICOLON
    (15) block -> . CURLYOPEN instructions CURLYCLOSE
    (16) block -> . CURLYOPEN error CURLYCLOSE
    (23) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction
    (24) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
    (25) loop -> . while
    (26) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . fun
    (11) statement -> . return
    (12) statement -> . print
    (27) while -> . WHILE ROUNDOPEN expression ROUNDCLOSE instruction
    (28) for -> . FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
    (36) assignment -> . assignment_left_side assignment_operator expression
    (37) assignment -> . assignment_left_side ASSIGN matrix
    (38) assignment -> . assignment_left_side ASSIGN vector
    (13) flow_keyword -> . BREAK
    (14) flow_keyword -> . CONTINUE
    (29) fun -> . fun_name ROUNDOPEN fun_body ROUNDCLOSE
    (30) fun -> . fun_name ROUNDOPEN error ROUNDCLOSE
    (20) return -> . RETURN expression
    (21) return -> . RETURN
    (17) print -> . PRINT print_body
    (39) assignment_left_side -> . var
    (33) fun_name -> . ZEROS
    (34) fun_name -> . ONES
    (35) fun_name -> . EYE
    (82) var -> . ID
    (83) var -> . ID SQUAREOPEN fun_body SQUARECLOSE

    error           shift and go to state 7
    CURLYOPEN       shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    EYE             shift and go to state 29
    ID              shift and go to state 19

    instructions                   shift and go to state 1
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    fun                            shift and go to state 14
    return                         shift and go to state 15
    print                          shift and go to state 16
    assignment_left_side           shift and go to state 20
    fun_name                       shift and go to state 23
    var                            shift and go to state 26

state 1

    (0) S' -> instructions .



state 2

    (1) instructions -> instruction .
    (2) instructions -> instruction . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . error SEMICOLON
    (15) block -> . CURLYOPEN instructions CURLYCLOSE
    (16) block -> . CURLYOPEN error CURLYCLOSE
    (23) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction
    (24) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
    (25) loop -> . while
    (26) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . fun
    (11) statement -> . return
    (12) statement -> . print
    (27) while -> . WHILE ROUNDOPEN expression ROUNDCLOSE instruction
    (28) for -> . FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
    (36) assignment -> . assignment_left_side assignment_operator expression
    (37) assignment -> . assignment_left_side ASSIGN matrix
    (38) assignment -> . assignment_left_side ASSIGN vector
    (13) flow_keyword -> . BREAK
    (14) flow_keyword -> . CONTINUE
    (29) fun -> . fun_name ROUNDOPEN fun_body ROUNDCLOSE
    (30) fun -> . fun_name ROUNDOPEN error ROUNDCLOSE
    (20) return -> . RETURN expression
    (21) return -> . RETURN
    (17) print -> . PRINT print_body
    (39) assignment_left_side -> . var
    (33) fun_name -> . ZEROS
    (34) fun_name -> . ONES
    (35) fun_name -> . EYE
    (82) var -> . ID
    (83) var -> . ID SQUAREOPEN fun_body SQUARECLOSE

    $end            reduce using rule 1 (instructions -> instruction .)
    CURLYCLOSE      reduce using rule 1 (instructions -> instruction .)
    error           shift and go to state 7
    CURLYOPEN       shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    EYE             shift and go to state 29
    ID              shift and go to state 19

    instruction                    shift and go to state 2
    instructions                   shift and go to state 30
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    fun                            shift and go to state 14
    return                         shift and go to state 15
    print                          shift and go to state 16
    assignment_left_side           shift and go to state 20
    fun_name                       shift and go to state 23
    var                            shift and go to state 26

state 3

    (3) instruction -> block .

    error           reduce using rule 3 (instruction -> block .)
    CURLYOPEN       reduce using rule 3 (instruction -> block .)
    IF              reduce using rule 3 (instruction -> block .)
    WHILE           reduce using rule 3 (instruction -> block .)
    FOR             reduce using rule 3 (instruction -> block .)
    BREAK           reduce using rule 3 (instruction -> block .)
    CONTINUE        reduce using rule 3 (instruction -> block .)
    RETURN          reduce using rule 3 (instruction -> block .)
    PRINT           reduce using rule 3 (instruction -> block .)
    ZEROS           reduce using rule 3 (instruction -> block .)
    ONES            reduce using rule 3 (instruction -> block .)
    EYE             reduce using rule 3 (instruction -> block .)
    ID              reduce using rule 3 (instruction -> block .)
    $end            reduce using rule 3 (instruction -> block .)
    CURLYCLOSE      reduce using rule 3 (instruction -> block .)
    ELSE            reduce using rule 3 (instruction -> block .)


state 4

    (4) instruction -> conditional .

    error           reduce using rule 4 (instruction -> conditional .)
    CURLYOPEN       reduce using rule 4 (instruction -> conditional .)
    IF              reduce using rule 4 (instruction -> conditional .)
    WHILE           reduce using rule 4 (instruction -> conditional .)
    FOR             reduce using rule 4 (instruction -> conditional .)
    BREAK           reduce using rule 4 (instruction -> conditional .)
    CONTINUE        reduce using rule 4 (instruction -> conditional .)
    RETURN          reduce using rule 4 (instruction -> conditional .)
    PRINT           reduce using rule 4 (instruction -> conditional .)
    ZEROS           reduce using rule 4 (instruction -> conditional .)
    ONES            reduce using rule 4 (instruction -> conditional .)
    EYE             reduce using rule 4 (instruction -> conditional .)
    ID              reduce using rule 4 (instruction -> conditional .)
    $end            reduce using rule 4 (instruction -> conditional .)
    CURLYCLOSE      reduce using rule 4 (instruction -> conditional .)
    ELSE            reduce using rule 4 (instruction -> conditional .)


state 5

    (5) instruction -> loop .

    error           reduce using rule 5 (instruction -> loop .)
    CURLYOPEN       reduce using rule 5 (instruction -> loop .)
    IF              reduce using rule 5 (instruction -> loop .)
    WHILE           reduce using rule 5 (instruction -> loop .)
    FOR             reduce using rule 5 (instruction -> loop .)
    BREAK           reduce using rule 5 (instruction -> loop .)
    CONTINUE        reduce using rule 5 (instruction -> loop .)
    RETURN          reduce using rule 5 (instruction -> loop .)
    PRINT           reduce using rule 5 (instruction -> loop .)
    ZEROS           reduce using rule 5 (instruction -> loop .)
    ONES            reduce using rule 5 (instruction -> loop .)
    EYE             reduce using rule 5 (instruction -> loop .)
    ID              reduce using rule 5 (instruction -> loop .)
    $end            reduce using rule 5 (instruction -> loop .)
    CURLYCLOSE      reduce using rule 5 (instruction -> loop .)
    ELSE            reduce using rule 5 (instruction -> loop .)


state 6

    (6) instruction -> statement . SEMICOLON

    SEMICOLON       shift and go to state 31


state 7

    (7) instruction -> error . SEMICOLON

    SEMICOLON       shift and go to state 32


state 8

    (15) block -> CURLYOPEN . instructions CURLYCLOSE
    (16) block -> CURLYOPEN . error CURLYCLOSE
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . error SEMICOLON
    (15) block -> . CURLYOPEN instructions CURLYCLOSE
    (16) block -> . CURLYOPEN error CURLYCLOSE
    (23) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction
    (24) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
    (25) loop -> . while
    (26) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . fun
    (11) statement -> . return
    (12) statement -> . print
    (27) while -> . WHILE ROUNDOPEN expression ROUNDCLOSE instruction
    (28) for -> . FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
    (36) assignment -> . assignment_left_side assignment_operator expression
    (37) assignment -> . assignment_left_side ASSIGN matrix
    (38) assignment -> . assignment_left_side ASSIGN vector
    (13) flow_keyword -> . BREAK
    (14) flow_keyword -> . CONTINUE
    (29) fun -> . fun_name ROUNDOPEN fun_body ROUNDCLOSE
    (30) fun -> . fun_name ROUNDOPEN error ROUNDCLOSE
    (20) return -> . RETURN expression
    (21) return -> . RETURN
    (17) print -> . PRINT print_body
    (39) assignment_left_side -> . var
    (33) fun_name -> . ZEROS
    (34) fun_name -> . ONES
    (35) fun_name -> . EYE
    (82) var -> . ID
    (83) var -> . ID SQUAREOPEN fun_body SQUARECLOSE

    error           shift and go to state 34
    CURLYOPEN       shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    EYE             shift and go to state 29
    ID              shift and go to state 19

    instructions                   shift and go to state 33
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    fun                            shift and go to state 14
    return                         shift and go to state 15
    print                          shift and go to state 16
    assignment_left_side           shift and go to state 20
    fun_name                       shift and go to state 23
    var                            shift and go to state 26

state 9

    (23) conditional -> IF . ROUNDOPEN expression ROUNDCLOSE instruction
    (24) conditional -> IF . ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction

    ROUNDOPEN       shift and go to state 35


state 10

    (25) loop -> while .

    error           reduce using rule 25 (loop -> while .)
    CURLYOPEN       reduce using rule 25 (loop -> while .)
    IF              reduce using rule 25 (loop -> while .)
    WHILE           reduce using rule 25 (loop -> while .)
    FOR             reduce using rule 25 (loop -> while .)
    BREAK           reduce using rule 25 (loop -> while .)
    CONTINUE        reduce using rule 25 (loop -> while .)
    RETURN          reduce using rule 25 (loop -> while .)
    PRINT           reduce using rule 25 (loop -> while .)
    ZEROS           reduce using rule 25 (loop -> while .)
    ONES            reduce using rule 25 (loop -> while .)
    EYE             reduce using rule 25 (loop -> while .)
    ID              reduce using rule 25 (loop -> while .)
    $end            reduce using rule 25 (loop -> while .)
    CURLYCLOSE      reduce using rule 25 (loop -> while .)
    ELSE            reduce using rule 25 (loop -> while .)


state 11

    (26) loop -> for .

    error           reduce using rule 26 (loop -> for .)
    CURLYOPEN       reduce using rule 26 (loop -> for .)
    IF              reduce using rule 26 (loop -> for .)
    WHILE           reduce using rule 26 (loop -> for .)
    FOR             reduce using rule 26 (loop -> for .)
    BREAK           reduce using rule 26 (loop -> for .)
    CONTINUE        reduce using rule 26 (loop -> for .)
    RETURN          reduce using rule 26 (loop -> for .)
    PRINT           reduce using rule 26 (loop -> for .)
    ZEROS           reduce using rule 26 (loop -> for .)
    ONES            reduce using rule 26 (loop -> for .)
    EYE             reduce using rule 26 (loop -> for .)
    ID              reduce using rule 26 (loop -> for .)
    $end            reduce using rule 26 (loop -> for .)
    CURLYCLOSE      reduce using rule 26 (loop -> for .)
    ELSE            reduce using rule 26 (loop -> for .)


state 12

    (8) statement -> assignment .

    SEMICOLON       reduce using rule 8 (statement -> assignment .)


state 13

    (9) statement -> flow_keyword .

    SEMICOLON       reduce using rule 9 (statement -> flow_keyword .)


state 14

    (10) statement -> fun .

    SEMICOLON       reduce using rule 10 (statement -> fun .)


state 15

    (11) statement -> return .

    SEMICOLON       reduce using rule 11 (statement -> return .)


state 16

    (12) statement -> print .

    SEMICOLON       reduce using rule 12 (statement -> print .)


state 17

    (27) while -> WHILE . ROUNDOPEN expression ROUNDCLOSE instruction

    ROUNDOPEN       shift and go to state 36


state 18

    (28) for -> FOR . ID ASSIGN numeric_expression RANGE numeric_expression instruction

    ID              shift and go to state 37


state 19

    (82) var -> ID .
    (83) var -> ID . SQUAREOPEN fun_body SQUARECLOSE

    ASSIGN          reduce using rule 82 (var -> ID .)
    ADDASSIGN       reduce using rule 82 (var -> ID .)
    SUBASSIGN       reduce using rule 82 (var -> ID .)
    MULASSIGN       reduce using rule 82 (var -> ID .)
    DIVASSIGN       reduce using rule 82 (var -> ID .)
    TRANSPOSITION   reduce using rule 82 (var -> ID .)
    MUL             reduce using rule 82 (var -> ID .)
    DIV             reduce using rule 82 (var -> ID .)
    DOTMUL          reduce using rule 82 (var -> ID .)
    DOTDIV          reduce using rule 82 (var -> ID .)
    L               reduce using rule 82 (var -> ID .)
    G               reduce using rule 82 (var -> ID .)
    EQ              reduce using rule 82 (var -> ID .)
    NEQ             reduce using rule 82 (var -> ID .)
    GE              reduce using rule 82 (var -> ID .)
    LE              reduce using rule 82 (var -> ID .)
    ADD             reduce using rule 82 (var -> ID .)
    SUB             reduce using rule 82 (var -> ID .)
    DOTADD          reduce using rule 82 (var -> ID .)
    DOTSUB          reduce using rule 82 (var -> ID .)
    SEMICOLON       reduce using rule 82 (var -> ID .)
    COMMA           reduce using rule 82 (var -> ID .)
    ROUNDCLOSE      reduce using rule 82 (var -> ID .)
    SQUARECLOSE     reduce using rule 82 (var -> ID .)
    RANGE           reduce using rule 82 (var -> ID .)
    error           reduce using rule 82 (var -> ID .)
    CURLYOPEN       reduce using rule 82 (var -> ID .)
    IF              reduce using rule 82 (var -> ID .)
    WHILE           reduce using rule 82 (var -> ID .)
    FOR             reduce using rule 82 (var -> ID .)
    BREAK           reduce using rule 82 (var -> ID .)
    CONTINUE        reduce using rule 82 (var -> ID .)
    RETURN          reduce using rule 82 (var -> ID .)
    PRINT           reduce using rule 82 (var -> ID .)
    ZEROS           reduce using rule 82 (var -> ID .)
    ONES            reduce using rule 82 (var -> ID .)
    EYE             reduce using rule 82 (var -> ID .)
    ID              reduce using rule 82 (var -> ID .)
    SQUAREOPEN      shift and go to state 38


state 20

    (36) assignment -> assignment_left_side . assignment_operator expression
    (37) assignment -> assignment_left_side . ASSIGN matrix
    (38) assignment -> assignment_left_side . ASSIGN vector
    (40) assignment_operator -> . ASSIGN
    (41) assignment_operator -> . ADDASSIGN
    (42) assignment_operator -> . SUBASSIGN
    (43) assignment_operator -> . MULASSIGN
    (44) assignment_operator -> . DIVASSIGN

    ASSIGN          shift and go to state 40
    ADDASSIGN       shift and go to state 41
    SUBASSIGN       shift and go to state 42
    MULASSIGN       shift and go to state 43
    DIVASSIGN       shift and go to state 44

    assignment_operator            shift and go to state 39

state 21

    (13) flow_keyword -> BREAK .

    SEMICOLON       reduce using rule 13 (flow_keyword -> BREAK .)


state 22

    (14) flow_keyword -> CONTINUE .

    SEMICOLON       reduce using rule 14 (flow_keyword -> CONTINUE .)


state 23

    (29) fun -> fun_name . ROUNDOPEN fun_body ROUNDCLOSE
    (30) fun -> fun_name . ROUNDOPEN error ROUNDCLOSE

    ROUNDOPEN       shift and go to state 45


state 24

    (20) return -> RETURN . expression
    (21) return -> RETURN .
    (52) expression -> . comparison_expression
    (53) expression -> . numeric_expression
    (54) expression -> . fun
    (55) comparison_expression -> . numeric_expression L numeric_expression
    (56) comparison_expression -> . numeric_expression G numeric_expression
    (57) comparison_expression -> . numeric_expression EQ numeric_expression
    (58) comparison_expression -> . numeric_expression NEQ numeric_expression
